# POCR

./: CMakeLists.txt  README.md  build.sh  setup.sh
include/AA/: AAStat.h  AliasAnalysis.h  PEGFold.h  PEGInterDyck.h
include/CFLData/: BasicTypes.h  BasicUtils.h  CFG.h  CFGrammar.h  CFLData.h  CFLEdge.h  CFLGraph.h  CFLNode.h  ECG.h  IVFG.h  PEG.h
include/CFLGraphs/: CFGrammar.h  CFLData.h  CFLEdge.h  CFLGraph.h  IVFG.h
include/CFLSolver/: AliasAnalysis.h  CFLBase.h  CFLOpt.h  CFLSolver.h  CFLStat.h  VFAnalysis.h
include/RSM/: GFPattern.h  RSM.h
include/Util/: Options.h  config.h
include/VFA/: IVFGFold.h  IVFGInterDyck.h  VFAStat.h  VFAnalysis.h
lib/: CMakeLists.txt
lib/AA/: AAGraphSimp.cpp  AAStat.cpp  AliasAnalysis.cpp  FocrAA.cpp  GRAA.cpp  GspanAA.cpp  PEGFold.cpp  PEGInterDyck.cpp  PocrAA.cpp
lib/CFLData/: BSECG.cpp  BasicUtils.cpp  CFG.cpp  CFGrammar.cpp  CFLGraph.cpp  ECG.cpp  IVFG.cpp  PEG.cpp
lib/CFLGraphs/: CFGrammar.cpp  CFLGraph.cpp  IVFG.cpp  PEG.cpp
lib/CFLSolver/: AAStat.cpp  AliasAnalysis.cpp  BSFocrCFL.cpp  CFLOpt.cpp  CFLSolver.cpp  CFLStat.cpp  FocrCFL.cpp  GRAA.cpp  GRVFA.cpp  GspanAA.cpp  GspanVFA.cpp  HPocrCFL.cpp  PocrAA.cpp  PocrCFL.cpp  PocrVFA.cpp  TRCFL.cpp  UCFL.cpp  VFAStat.cpp  VFAnalysis.cpp
lib/RSM/: GFPattern.cpp  RSM.cpp
lib/Util/: Options.cpp
lib/VFA/: FocrVFA.cpp  GRVFA.cpp  GspanVFA.cpp  IVFGFold.cpp  IVFGInterDyck.cpp  PocrVFA.cpp  TRVFA.cpp  VFAGraphSimp.cpp  VFAStat.cpp  VFAnalysis.cpp
tests/: aa.cfg  aa_simple.cfg  aa_two.cfg  aanew.cfg  art.peg  art.vfg  astar.peg  astar.vfg  astyle.peg  bzip2.peg  bzip2.vfg  crafty.peg  crafty.vfg  gzip.peg  gzip.vfg  i3.peg  i3.vfg  janet.peg  namd.peg  namd.vfg  psql.peg  psql.vfg  taint-new.cfg  taint.cfg  taint_simple.cfg  test.cfg  vf.cfg  vf_manual.cfg  vf_simple.cfg  vf_two.cfg  vfnew.cfg
tools/: CMakeLists.txt
tools/AA/: CMakeLists.txt  aa.cpp
tools/CFL/: CMakeLists.txt  cfl.cpp
tools/FoldablePattern/: CMakeLists.txt  fp.cpp
tools/VFA/: CMakeLists.txt  vf.cpp  vfa.cpp
